// hero/hero.proto
syntax = "proto3";

package hero;

service HeroesService {
  rpc FindOne (IHeroById) returns (IHero) {}
}

message IHeroById {
  int32 id = 1;
}

message IHero {
  int32 id = 1;
  string name = 2;
}